--- a/svelte-app/public/index.html
+++ b/svelte-app/public/index.html
@@ -4,14 +4,13 @@
 	<meta charset='utf-8'>
 	<meta name='viewport' content='width=device-width,initial-scale=1'>
 
-	<title>Svelte app</title>
+	<title>GeoMeasure: Distance and Area measurement on a Map</title>
 
 	<link rel='icon' type='image/png' href='/favicon.png'>
 	<link rel='stylesheet' href='/global.css'>
 	<link rel='stylesheet' href='/build/bundle.css'>
 	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
 	<link rel="javascript" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" />
-	<link rel="javascript" href="https://unpkg.com/leaflet-textpath@1.2.3/leaflet.textpath.js" />
 	<script defer src='/build/bundle.js'></script>
 </head>
 
